--- a/tutorials/03-links-and-images/links-and-images/links.html
+++ b/tutorials/03-links-and-images/links-and-images/links.html
@@ -13,7 +13,8 @@
 <p>This particular page is about links! There are three kinds of links:
 
   <ul>
-    <li>Absolute links, like to <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'target='_blank'>Mozilla Developer Network</a>, which is a very good resource for web developers.</li>
+    <li>Absolute links, like to
+        <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'target='_blank'>Mozilla Developer Network</a>, which is a very good resource for web developers.</li>
     <li>Relative links, like to our <a href='misc/extras.html'>extras page</a>.</li>
   </ul>
 
